Common use of module, and add text to Readme.